# pavise

./: .dockerignore  .gitignore  .impeccable.md  CLAUDE.md  Cargo.toml  Dockerfile  PLAN.md  README.md  SECURITY.md  SEO_AUDIT.md  TEST_COVERAGE_PLAN.md  docker-compose.yml  install.sh
.github/actions/pavise/: action.yml
.github/workflows/: ci.yml  docker.yml  release.yml
benchmarks/: fetch_corpus.sh  run_bench.sh
benchmarks/corpus/: manifest.full.tsv  manifest.tsv  sha256.txt
ci/: gitlab-ci-template.yml
data/: framework_vulns.yaml
docs/: mobsf-comparison.md
examples/: gen_pdf.rs
rules/: ios_apis.yaml  permissions.yaml  secrets.yaml  trackers.yaml
scripts/: sync_vulns.sh
src/: lib.rs  main.rs  serve.rs  types.rs
src/baseline/: mod.rs
src/binary/: elf.rs  macho.rs  mod.rs  symbols.rs
src/manifest/: android_manifest.rs  entitlements.rs  info_plist.rs  mod.rs  provisioning.rs
src/network/: domain_intel.rs  geoip_local.rs  geoip_remote.rs  mod.rs  osv.rs
src/patterns/: ciphers.rs  emails.rs  engine.rs  entropy.rs  mod.rs  secrets.rs  trackers.rs  urls.rs
src/report/: html.rs  json.rs  mod.rs  pdf.rs  sarif.rs
src/resources/: ats.rs  certs.rs  firebase.rs  mod.rs  network_security.rs  sca.rs  vulns.rs
src/scoring/: mod.rs  owasp.rs
src/server/: config.rs  mod.rs  state.rs
src/unpacker/: apk.rs  ipa.rs  mod.rs
templates/: index.html  landing.html  report.html.tera  report.typ
tests/: boundary_conditions.rs  integration_scan.rs  malformed_input.rs  pattern_engine.rs  pattern_engine_edge_cases.rs  report_generation.rs  server_integration.rs
tests/common/: mod.rs
web/: 404.html  index.html  package-lock.json  package.json  robots.txt  scan.html  sitemap.xml  tsconfig.json  vite.config.ts
web/src/: landing.js  scan.js
web/src/scripts/: dithering-shader.ts  landing.js  landing.ts  scan.js  scan.ts
web/src/styles/: landing.css  scan.css
